# titirilquen-web

./: .gitignore  HANDOFF.md  NOTICE.md  README.md  package-lock.json  package.json  tsconfig.base.json  turbo.json
apps/api/: .dockerignore  Dockerfile  README.md  fly.toml  pyproject.toml
apps/api/src/api/: main.py  serialization.py
apps/api/tests/: test_health.py  test_land_use.py  test_simulate.py
apps/web/: README.md  index.html  package.json  tailwind.config.js  tsconfig.json  vercel.json  vite.config.ts
apps/web/public/pyodide/: titirilquen_core-0.1.0-py3-none-any.whl
apps/web/scripts/: build-core-wheel.mjs
apps/web/src/: index.css  main.tsx  mdx.d.ts
apps/web/src/components/: CityStrip.tsx  Equation.tsx  LanguageSwitcher.tsx  RootLayout.tsx  RunStatus.tsx  ScenarioToolbar.tsx  SimulationSkeleton.tsx  ThemeSwitcher.tsx
apps/web/src/components/compare/: KPITable.tsx  ScenarioCard.tsx  ScenarioFlowComparison.tsx
apps/web/src/components/modules/: CityBuilder.tsx  (+4 more)
apps/web/src/i18n/: index.ts
apps/web/src/lib/: api-v2.ts  api.ts  defaults.ts  joint-presets.ts  kpis.ts  metrics.ts  presets.ts  pyodide-engine.ts  serialization.ts  svg-export.ts  theme.ts  types-v2.ts  types.ts  utility.ts
apps/web/src/pages/: AboutPage.tsx  ComparePage.tsx  CoupledPage.tsx  LandUsePage.tsx  SandboxPage.tsx  TutorialPage.tsx
apps/web/src/store/: compareStore.ts  landUseStore.ts  simulationStore.ts  themeStore.ts
apps/web/src/tutorials/: components.tsx  manifest.ts
apps/web/src/workers/: pyodide.worker.ts
docs/: ARCHITECTURE.md  DEPLOY.md  DISCREPANCIES.md
(+36 files in other folders)
