[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "titirilquen_api"
version = "0.1.0"
description = "FastAPI wrapper del núcleo Titirilquen"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "titirilquen_core",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
    "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/api"]

[tool.uv.sources]
titirilquen_core = { path = "../../packages/titirilquen_core", editable = true }
